@@ -28,15 +28,25 @@ repository.url  = http://github.com/Test-More/Test2-Plugin-UUID/
 repository.type = git
 
 [Prereqs]
-perl             = 5.008009
-Test2::API       = 1.302165
-Data::UUID       = 0
+perl       = 5.008009
+Test2::API = 1.302165
+UUID::Tiny = 1.04
+
+[Prereqs / RuntimeSuggests]
+UUID           = 0.35
+Data::UUID::MT = 1.001
+Data::UUID     = 1.227
 
 [Prereqs / TestRequires]
-Test2::V0 = 0.000124
+Test2::V0              = 0.000162
+Test2::Require::Module = 0.000162
 
 [Prereqs / DevelopRequires]
 Test::Spelling = 0.12   ; for xt/author/pod-spell.t
+UUID           = 0.35
+Data::UUID::MT = 1.001
+Data::UUID     = 1.227
+Atomic::Pipe   = 0.022
 
 [MakeMaker]
 [CPANFile]
