@@ -4,30 +4,28 @@ use warnings;
 
 our $VERSION = '0.002004';
 
+use Carp qw/croak/;
 use Test2::API qw/test2_add_uuid_via/;
-
-use Data::UUID;
-
-my ($UG, $UG_PID);
-
-sub UG {
-    return $UG if $UG && $UG_PID && $UG_PID == $$;
-
-    $UG_PID = $$;
-    return $UG = Data::UUID->new;
-}
-
-# Initialize it here in this PID to start
-UG();
-
-# OSSP::UUID (Debian) produces lowercase UUIDs, consistently uppercase.
-sub gen_uuid() { uc UG()->create_str() }
+require Test2::Util::UUID;
 
 sub import {
-    test2_add_uuid_via(\&gen_uuid);
+    my $class = shift;
+
+    $class->apply_plugin(@_);
+
+    return;
+}
+
+sub apply_plugin {
+    my $class = shift;
+
+    my ($gen_uuid, $backend) = Test2::Util::UUID->get_gen_uuid(@_);
+
+    test2_add_uuid_via($gen_uuid);
     require Test2::Hub;
     Test2::Hub->new; # Make sure the UUID generator is found
-    return;
+
+    return $backend->();
 }
 
 1;
@@ -57,6 +55,63 @@ This is also useful at the command line for 1-time use:
 
     $ perl -MTest2::Plugin::UUID path/to/test.t
 
+=head1 CONTROLLING WARNINGS AND BACKENDS
+
+You can turn off backend warnings, and choose your own backend order
+preference:
+
+    use Test2::Plugin::UUID warn => 0, backends => ['UUID', ...];
+
+Or at the command line:
+
+    perl -MTest2::Plugin::UUID=warn,0 path/to/test.t
+
+Or via env vars:
+
+    TEST2_UUID_BACKEND="UUID,Data::UUID::MT" TEST2_UUID_WARN=0 perl path/to/test.t
+
+Normally warnings will be issued if L<UUID::Tiny> or L<Data::UUID> are used as
+the first is slow and the second is not suitible for database keys.
+
+=head1 BACKENDS
+
+One of the following modules will be used under the hood, they are listed here
+in order of preference.
+
+=over 4
+
+=item L<UUID> >= 0.35
+
+When possible this module will use the L<UUID> cpan module, but it must be
+version 0.35 or greater to avoid a fork related bug. It will generate version 7
+UUIDs as they are most suitible for database entry.
+
+=item L<Data::UUID::MT>
+
+L<Data::UUID::MT> is the second choice for UUID generation. With this module
+version 4 UUIDs are generated as they are fairly usable in databases.
+
+=item L<UUID::Tiny> - slow
+
+L<UUID::Tiny> is used if the previous 2 are not available. This module is pure
+perl and thus could be slower than the others. Version 4 UUIDs are generated
+when this module is used.
+
+A warning will be issued with this module. You can surpress the warning with
+either the C<$TEST2_UUID_NO_WARN> environment variable. You can also surpress
+it with the ':nowarn' import argument.
+
+=item L<Data::UUID> - Not Suitible for Databases
+
+This is the last resort module. This generates UUIDs fast, but they are of a
+type/version that is not suitible for database keys.
+
+A warning will be issued with this module. You can surpress the warning with
+either the C<$TEST2_UUID_NO_WARN> environment variable. You can also surpress
+it with the ':nowarn' import argument.
+
+=back
+
 =head1 SOURCE
 
 The source code repository for Test2-Plugin-UUID can be found at
@@ -80,7 +135,7 @@ F<https://github.com/Test-More/Test2-Plugin-UUID/>.
 
 =head1 COPYRIGHT
 
-Copyright 2019 Chad Granum E<lt>exodist@cpan.orgE<gt>.
+Copyright Chad Granum E<lt>exodist@cpan.orgE<gt>.
 
 This program is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself.
