@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+    - Expand for multiple UUID generators
+    - Some warnings about UUID generator quality
+    - Add tests for each backend
+    - Add tests for forking to make sure there are no duplicates on fork
+    - Add Test2::Util::UUID to make logic reusable
+
 0.002003  2024-05-12 11:56:39-07:00 America/Los_Angeles
 
     - Fix issue where duplicate UUIDs could be generated after forking
